<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hello"
	    android:id="@+id/textView1"/>

	<Button android:text="@string/run_as_transmitter"
		android:layout_height="wrap_content" android:layout_width="250dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="120dp" android:id="@+id/txButton">
	</Button>

	<Button android:text="@string/run_as_receiver"
		android:layout_height="wrap_content" android:layout_width="250dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="200dp" android:id="@+id/rxButton"></Button>

</RelativeLayout>
