<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/tx_name"></TextView>
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_marginTop="30dp">

		<ProgressBar android:id="@+id/progressBar1"
			android:layout_height="30dp" android:layout_width="30dp" android:layout_marginLeft="50dp"></ProgressBar>

		<TextView android:layout_gravity="center_horizontal"
			android:id="@+id/textView1" android:text="@string/tx_get_ip"
			android:layout_marginTop="30dp" android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content"></TextView>
	</TableRow>

	<Button android:text="@string/tx_start_recording"
		android:layout_height="wrap_content" android:id="@+id/btnStart"
		android:layout_width="247dp" android:layout_gravity="center_horizontal" android:layout_marginTop="15dp"></Button>


	<Button android:text="@string/tx_stop_recording"
		android:layout_height="wrap_content" android:id="@+id/btnStop"
		android:layout_width="247dp" android:layout_gravity="center_horizontal" android:layout_marginTop="30dp"></Button>
	    	    
</LinearLayout>
